# HeartRateMonitor

./: CMakeLists.txt  README.md
cmakeModules/: FindFFTW.cmake
res/: icons.qrc
src/: MouseMonitorPlot.cpp  MouseMonitorPlot.h  hrm.cpp  hrmConsole.cpp  hrmConsole.h  hrmMainWindow.cpp  hrmMainWindow.h
src/data/: Controller.cpp  Controller.h  FFT.cpp  FFT.h  FFTBuffer.cpp  FFTBuffer.h  Filter.cpp  Filter.h  Serial.cpp  Serial.h
src/gui/: Console.cpp  Console.h  MainWindow.cpp  MainWindow.h  MouseMonitorPlot.cpp  MouseMonitorPlot.h  SettingsDialog.cpp  SettingsDialog.h
ui/: MainWindow.ui  SettingsDialog.ui  hrmMainWindow.ui
